# Vision_Transformer_from_Scratch

./: .gitignore  README.md  params.yaml  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: Stage_01_data_ingestion.ipynb  Stage_02_data_validation.ipynb  Stage_03_data_transformation.ipynb  Stage_04_Model_Training.ipynb  Stage_05_Model_Evaluation.ipynb  Stage_07_Prediction_Pipeline.ipynb  ViT_From_Scratch.ipynb  ViT_From_Scratch_final.ipynb
src/vision_Transformer/Components/: data_ingestion.py  data_transformation.py  data_validation.py
src/vision_Transformer/Components/ViT_Component/: MLP.py  Patch_Embedding.py  Transformer_EncoderLayer.py  Vision_Transformer_Class.py
src/vision_Transformer/Components/Vision_Transformer_Component/: Patch_Embedding.py
src/vision_Transformer/Entity/: __init__.py
src/vision_Transformer/config/: configuration.py
src/vision_Transformer/logging/: __init__.py
src/vision_Transformer/utils/: common.py
